Revision history for the Perl library Validation::Class

7.900044  2013-04-09

  - Error reporting unknown params when no fields specified

7.900043  2013-04-04

  - V::C, V::C::S, and V::C::S::S now requires Perl 5.10.0

  - Added better numeric filtering, supports negative numbers

  - Updated decimal filter and added currency filter

  - Updated POD, added plugin documentation reference, added note to clone_field

7.900042  2013-03-28

  - Field errors to output messages using the field label where applicable

7.900041  2013-03-28

  - Better V::C prototype configuration merging (important for roles usage)

7.900036  2013-03-23

  - POD Updates

7.900032  2013-02-26

  - Fixed a bug declaring filters, updated POD and added test case

7.900031  2013-02-24

  - Fixed a bug in the auto-validating method execution

  - Added new tests for auto-validating methods and dot-notation-style fields

7.900030  2013-02-09

  - Fixed a bug in the error_fields method

  - Fixed a bug in the role inheritance functionality

  - Minor POD update

7.900029  2013-02-02

  - Now exporting the prototype is_valid method into the calling class

  - Minor POD update about alternate self-validating-method usage and syntax

7.900028  2013-01-23

  - Minor POD updates

  - Allowing field and mixin keywords to register empty definitions

  - Added the does method to the prototype to verify attached roles

7.900026  2013-01-17

  - Various POD updates

  - Preparing to support of foreign directives

  - Patched merge in Validation/Class/Mapping.pm to address a bug in Hash::Merge

  - Updated register_settings in Validation/Class/Prototype.pm

7.900023  2013-01-13

  - Added the ability to append and overwrite imported fields and mixins

7.900022  2013-01-11

  - Added/Update POD in the main module and cookbook

  - Added role-requirements (methods required by subclass) settings fom the load keyword

7.900021  2013-01-10
